# PyrogramBot-TestTask

./: .gitignore  README.md  database_sample.ini  env_sample  init.sql  pyproject.toml
src/: config.py  main.py  psql_ops.py
